# cg.course

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  generate.sh  install.sh
Exs01/: shader.frag  shader.vert
Exs02/: exs02  main.cpp
Exs03/: README.txt  camera.h  exs03  main.cpp
Exs03/report/: zjufontlogo.eps
Exs04/: Makefile  main.cpp  proj  stanford_bunny.cpp
Exs04/proj04/: main.cpp  proj04.cbp  proj04.depend  proj04.layout  stanford_bunny.h
src/: CMakeLists.txt  cgexs_config.h  cgexs_config.h.in
src/draw_table/: CMakeLists.txt  main.cpp
src/gl_lights/: CMakeLists.txt  main.cpp
src/gl_lists/: CMakeLists.txt  main.cpp
src/gl_pick/: main.cpp
src/gl_texture/: CMakeLists.txt  main.cpp  texture.h
src/gl_viewer/: CMakeLists.txt  Makefile  main.cpp
src/hexagram/: CMakeLists.txt  main.cpp
src/povray_pack/: table.pov
webgl_version/: hexagram.js  hexagram_demo.html
